# adaptive_learning_webapp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  README.md  db.sqlite3  ecosystem.config.js  insert_VideoModules.py  next.config.mjs  package-lock.json  package.json  plan.md  populate_thermodynamics_questions.py  pyproject.toml  version.json
.github/workflows/: ci.yml  deploy-dev.yml  deploy.yml
adaptive_learning/: .env.example  db.sqlite3  settings.py  urls.py
adaptive_learning/adaptive_learning/: settings.py
adaptive_learning/my_app/: urls.py  views.py
adaptive_learning/my_app/static/js/: chatbot.js
benchmark/: README.md  benchmark_results.json  benchmark_results_sqlite.json  comprehensive_test.py
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh
my_app/: views.py
my_app/ML/: ncdm_inference.py
my_app/templates/my_app/: learning_video.html
prisma/: schema.prisma  seed-demo.ts  seed.ts  set-provider.ts
prisma/migrations/20260327000000_add_folder_to_learning_material/: migration.sql
src/: middleware.ts  proxy.ts
src/app/: layout.tsx  page.tsx
src/app/(auth)/login/: page.tsx
src/app/(auth)/register/: page.tsx
src/app/(dashboard)/: layout.tsx
src/app/(dashboard)/student/: page.tsx
src/app/(dashboard)/teacher/: page.tsx
src/components/: Chatbot.tsx  version-modal.tsx
src/components/dashboard/: sidebar.tsx
src/components/ui/: sheet.tsx
src/lib/: auth.ts  hooks.ts  learning-material.ts  prisma.ts  storage.ts  utils.ts  version.ts
src/types/: index.ts  next-auth.d.ts
(+33 files in other folders)
