[project]
name = "adaptive-learning"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "Django",
    "numpy",
    "pandas",
    "dj-database-url",
    "python-dotenv",
    "torch",
    "torchvision",
    "openai",
    "sentence-transformers",
    "tenacity",
    "gunicorn",
    "faiss-cpu",
    "whitenoise",
    "openpyxl",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]
